@@ -1,14 +1,23 @@
 --- #YAML:1.0
 name:                Win32-API
-version:             0.52
+version:             0.53
 abstract:            Perl Win32 API Import Facility
-license:             ~
+license:             perl
 author:              
-    - Aldo Calpini <dada@perl.it>, Cosimo Streppone <cosimo@cpan.org>
+    - Aldo Calpini <dada@perl.it>
+    - Cosimo Streppone <cosimo@cpan.org>
 generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
-requires:     
-    Win32:                         0
+no_index:
+    directory:
+    - inc
+keywords:
+    - win32
+    - api
+    - dll
+    - libraries
+requires:
+    Win32: 0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
