@@ -1,5 +1,10 @@
 History of Win32::API perl extension.
 
+2008-03-02  Win32::API v0.53     Cosimo
+
+   - Devel::AssertOS came out unauthorized.
+   - META.yml was outdated and wrong.
+
 2008-03-01  Win32::API v0.52     Cosimo
 
    - Devel::AssertOS was not properly set up in 0.51.
